# eed_basic_utils

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pytests.yml
src/eed_basic_utils/: __init__.py
src/eed_basic_utils/os/: __init__.py  get_git_root.py
src/eed_basic_utils/time/: __init__.py  sleep_random.py
tests/: conftest.py  test_file_exists.py  test_sleep_random.py
tests/os/: test_file_exists.py  test_get_git_root.py
tests/time/: test_sleep_random.py
